// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches a book 1`] = `
Object {
  "book": Object {
    "copies": Array [
      Object {
        "borrower": Object {
          "avatar": Object {
            "color": "pink",
            "image": Object {
              "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/avatars/m10.png",
            },
          },
          "id": "Mi1Vc2Vy",
          "name": "Paul",
        },
        "id": "MS1Cb29rQ29weQ==",
        "owner": Object {
          "avatar": Object {
            "color": "yellow",
            "image": Object {
              "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/avatars/w2.png",
            },
          },
          "id": "MS1Vc2Vy",
          "name": "John",
        },
      },
      Object {
        "borrower": null,
        "id": "Mi1Cb29rQ29weQ==",
        "owner": Object {
          "avatar": Object {
            "color": "black",
            "image": Object {
              "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/avatars/m25.png",
            },
          },
          "id": "My1Vc2Vy",
          "name": "Sylvester Greenholt DVM",
        },
      },
    ],
    "createdAt": "2020-07-19T14:30:00.000Z",
    "description": "Laudantium molestias ut.",
    "id": "MS1Cb29r",
    "title": "Blood of Elves",
    "updatedAt": "2020-07-19T14:45:00.000Z",
  },
}
`;

exports[`fetches a book with details 1`] = `
Object {
  "book": Object {
    "author": Object {
      "name": "Andrzej Sapkowski",
    },
    "cover": Object {
      "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/book-covers/harry5.jpg",
    },
    "description": "Laudantium molestias ut.",
    "id": "MS1Cb29r",
    "title": "The lady of the lake",
  },
}
`;

exports[`fetches a book with details 2`] = `
Object {
  "book": Object {
    "id": "MS1Cb29r",
    "title": "The lady of the lake",
  },
}
`;

exports[`fetches a random book 1`] = `
Object {
  "cover": Object {
    "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/book-covers/witcher4.jpg",
  },
  "title": "The tower of the swallow",
}
`;

exports[`fetches books 1`] = `
Object {
  "books": Array [
    Object {
      "copies": Array [
        Object {
          "borrower": null,
          "owner": Object {
            "id": "MS1Vc2Vy",
            "name": "John",
          },
        },
        Object {
          "borrower": Object {
            "id": "Mi1Vc2Vy",
            "name": "Paul",
          },
          "owner": Object {
            "id": "My1Vc2Vy",
            "name": "Sylvester Greenholt DVM",
          },
        },
      ],
      "cover": Object {
        "path": "/images/book-covers/harry5.jpg",
        "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/book-covers/harry5.jpg",
      },
      "id": "MS1Cb29r",
      "title": "Hobbit",
    },
    Object {
      "copies": Array [],
      "cover": Object {
        "path": "/images/book-covers/expanse1.jpg",
        "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/book-covers/expanse1.jpg",
      },
      "id": "Mi1Cb29r",
      "title": "Star Wars IV",
    },
    Object {
      "copies": Array [],
      "cover": Object {
        "path": "/images/book-covers/witcher5.jpg",
        "url": "https://res.cloudinary.com/lucassus/image/upload/bookshelf/images/book-covers/witcher5.jpg",
      },
      "id": "My1Cb29r",
      "title": "Star Wars V",
    },
  ],
  "booksCount": 3,
}
`;

exports[`fetches books along with authors and books again 1`] = `
Object {
  "books": Array [
    Object {
      "author": Object {
        "books": Array [
          Object {
            "title": "Qui Adipisci Qui",
          },
          Object {
            "title": "Veniam",
          },
        ],
        "name": "Andrzej Sapkowski",
      },
      "title": "Qui Adipisci Qui",
    },
    Object {
      "author": Object {
        "books": Array [
          Object {
            "title": "Qui Adipisci Qui",
          },
          Object {
            "title": "Veniam",
          },
        ],
        "name": "Andrzej Sapkowski",
      },
      "title": "Veniam",
    },
  ],
}
`;

exports[`fetches books with authors 1`] = `
Object {
  "books": Array [
    Object {
      "author": Object {
        "id": "My1BdXRob3I=",
        "name": "Hayden Orn",
      },
      "id": "NC1Cb29r",
      "title": "Alias",
    },
    Object {
      "author": Object {
        "id": "Mi1BdXRob3I=",
        "name": "Velda Bailey",
      },
      "id": "My1Cb29r",
      "title": "Exercitationem Reiciendis Cupiditate Provident",
    },
    Object {
      "author": Object {
        "id": "MS1BdXRob3I=",
        "name": "Tolkien",
      },
      "id": "MS1Cb29r",
      "title": "Hobbit",
    },
    Object {
      "author": Object {
        "id": "MS1BdXRob3I=",
        "name": "Tolkien",
      },
      "id": "Mi1Cb29r",
      "title": "Lord of the Rings",
    },
  ],
  "booksCount": 4,
}
`;
